# perun

./: README.md  pyproject.toml  requirements.txt
perun/collect/trace/: collect_engine.py  configuration.py  meson.build  run.py
perun/collect/trace/pin/: __init__.py  engine.py  meson.build  parse.py  scan_binary.py
perun/collect/trace/pin/parse/: __init__.py  instructions_parser.py  memory_parser.py  meson.build  parser.py  time_parser.py
perun/collect/trace/pin/pintool/: pintool.py
perun/collect/trace/pin/pintool/templates/: analysis.jinja2  instrumentation.jinja2  main.jinja2  makefile.jinja2  pintool.jinja2
perun/collect/trace/pin/templates/: analysis-functions.jinja2  instrumentation-functions.jinja2  main-function.jinja2  makefile.jinja2  meson.build  pintool-duration.jinja2  pintool-memory.jinja2  pintool.jinja2
perun/profile/: factory.py
perun/templates/: meson.build  pin_data_structures.jinja2  pin_instrumentation_functions.jinja2  pin_makefile.jinja2  pin_pintool.jinja2  pin_pintool_duration.jinja2  pin_pintool_memory.jinja2
perun/utils/: __init__.py  exceptions.py
perun/utils/common/: cli_kit.py
perun/view/: __init__.py  meson.build
perun/view/basicblocks/: __init__.py  meson.build  run.py
perun/view/funcargs/: __init__.py  meson.build  run.py
perun/view/treemap/: __init__.py  meson.build  run.py
tests/: test_tracer.py
tests/sources/collect_trace/: tst  tst-no-debug  tst_waiting
tests/sources/collect_trace/cpp_sources/: tst.cpp
