perun_collect_trace_pin_parse_dir = perun_collect_trace_pin_dir / 'parse'

perun_collect_trace_pin_parse_files = files(
    '__init__.py',
    'instructions_parser.py',
    'memory_parser.py',
    'parser.py',
    'time_parser.py',
)

py3.install_sources(
    perun_collect_trace_pin_parse_files,
    subdir: perun_collect_trace_pin_parse_dir,
)